Guy comments 1-3, Ian comments 3-4.

--- a/doc/dissertation/ABSOL_Ara_Adkins.tex
+++ b/doc/dissertation/ABSOL_Ara_Adkins.tex
@@ -176,9 +176,9 @@
 
 \hypersetup{
     colorlinks,
-    linkcolor={blue!30!black},
-    citecolor={blue!30!black},
-    urlcolor={blue!80!black}
+    linkcolor={black},
+    citecolor={black},
+    urlcolor={black}
 }
 
 \makeatletter
@@ -296,9 +296,8 @@
 
 % TODO Proof Read
 % TODO Formatting
-% TODO Glossaries and Acronyms
-% TODO Numbering for all listings from final code
-% TODO Appendices
+% TODO Clarify terminology around correctness and termination -> redefine in intro (clarify in abstract too) -> termination as a general property. 
+% TODO Scope (exec/non-exec) is broader than intended 
 
 % Acknowledgements
 \include{resources/acknowledgements}
