--- a/doc/dissertation/resources/literature_survey.tex
+++ b/doc/dissertation/resources/literature_survey.tex
@@ -274,8 +274,7 @@ These metalanguages are concerned with the specification of a property or some s
 Metalanguages are used to make user-defined abstractions into first-class citizens through accurate description of the abstraction \citep{Siek:2010:GPL:1706356.1706358}.
 To this end, the project needs to create a combined notation, in itself a DSL, for the specification of both syntax and semantics of a DSL. \\
 
-% TODO is a wide / are a wide ?
-With the field having been in development for ``more than 40 years'', there is a wide variety of metalanguages in use today for the specification of language syntax and semantics \citep{Zhang:2004:SSD:981009.981013}. 
+With the field having been in development for ``more than 40 years'', there are a wide variety of metalanguages in use today for the specification of language syntax and semantics \citep{Zhang:2004:SSD:981009.981013}. 
 This section aims to explore and evaluate these techniques. 
 
 \subsection{Specifying Language Syntax} % (fold)
@@ -377,7 +376,6 @@ Correct application of unparse to the AST is able to demonstrate the correctness
 \subsection{Specifying Language Semantics} % (fold)
 \label{sub:specifying_language_semantics}
 \defblock{11cm}{Semantics}{
-    % TODO should this be defines or define ? 
     The semantics of a language defines the meaning of syntactically valid strings in the language.
     This can be viewed as either the \textit{behaviour} followed when executing a program in this language \citep{slonneger1995formal}.
     Alternatively, it is the \textit{effect} of executing these syntactically valid strings \citep{hennessy1990semantics}.
