--- a/doc/dissertation/resources/conclusion.tex
+++ b/doc/dissertation/resources/conclusion.tex
@@ -5,7 +5,7 @@ Despite the numerous failures of the project, the end result is a novel contribu
 Despite the flaws in both the metalanguage and metacompiler, the achievements of this project cannot be ignored. 
 The main successes of this project are twofold:
 \begin{itemize}
-    \item \textbf{Advancing the State of the Art in Language Verification:} The combination of the integrated syntactic and semantic specification in the form of \gls{metaspec}, and the novel verification algorithms implemented in \gls{absol} itself, this project provides two major novel contributions to the language verification ecosystem.
+    \item \textbf{Advancing the State of the Art in Language Verification:} With the combination of the integrated syntactic and semantic specification in the form of \gls{metaspec}, and the novel verification algorithms implemented in \gls{absol} itself, this project provides two major novel contributions to the language verification ecosystem.
     \item \textbf{An Extensible Metacompiler:} The final version of the metacompiler is a functional and extensible solution to the language verification problem for \glspl{dsl} with limited semantics.
     It allows the language designers to create in relative safety, providing clear and concise diagnostics to help diagnose errors.
 \end{itemize}
