Clarification on the meaning of 'correctness'.

--- a/doc/dissertation/ABSOL_Ara_Adkins.tex
+++ b/doc/dissertation/ABSOL_Ara_Adkins.tex
@@ -50,6 +50,7 @@
 \usepackage{microtype}
 \usepackage{lmodern}
 \usepackage[chapter]{minted}
+\usepackage{epigraph}
 
 \usepackage{relsize}
 
@@ -296,8 +297,6 @@
 
 % TODO Proof Read
 % TODO Formatting
-% TODO Clarify terminology around correctness and termination -> redefine in intro (clarify in abstract too) -> termination as a general property. 
-% TODO Scope (exec/non-exec) is broader than intended 
 
 % Acknowledgements
 \include{resources/acknowledgements}
