--- a/doc/dissertation/resources/bibliography.bib
+++ b/doc/dissertation/resources/bibliography.bib
@@ -983,3 +983,11 @@ url="http://dx.doi.org/10.1007/978-3-540-25935-0_4"
   note = {Accessed: 2017-04-18},
   year = 2017
 }
+
+@misc{incomplete_iry,
+  title = {A Brief, Incomplete and Mostly Wrong History of Programming Languages},
+  author = {James Iry},
+  howpublished = {\url{https://hackage.haskell.org/package/tasty}},
+  note = {Accessed: 2017-04-28},
+  year = 2009
+}
